# paneful

./: .gitignore  BUGS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.server.json
docs/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml
server/: browser.ts  claude-monitor.ts  editor-monitor.ts  git-monitor.ts  inbox-monitor.ts  index.ts  install-app.ts  ipc-client.ts  ipc.ts  port-monitor.ts  project-store.ts  pty-manager.ts  settings-store.ts  ws-handler.ts
src/: browser.rs  main.rs  protocol.rs
src/ipc/: socket.rs
src/project/: model.rs  store.rs
src/pty/: manager.rs  session.rs
src/server/: http.rs  ws.rs
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  main.tsx
web/src/components/: CommandPalette.tsx  EmptyState.tsx  ShortcutsDialog.tsx  SyncToast.tsx
web/src/components/Sidebar/: FavouriteItem.tsx  FavouritesList.tsx  LaunchFavouriteDialog.tsx  NewProjectDialog.tsx  ProjectItem.tsx  Sidebar.tsx  (+1 more)
web/src/hooks/: useEditorFocus.ts  useKeyboardShortcuts.ts  usePaneDrag.ts  usePaneResize.ts  useResizeObserver.ts  useTerminal.ts  useWebSocket.ts
web/src/lib/: constants.ts  layout-engine.ts  native-drop.ts  persist.ts  protocol.ts  terminal-actions.ts
web/src/stores/: favouriteStore.ts  layoutStore.ts  projectStore.ts  sessionStore.ts  uiStore.ts
web/src/styles/: global.css
(+7 files in other folders)
