[package]
name = "paneful"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
tower-http = { version = "0.5", features = ["fs", "cors"] }
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
open = "5"
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
directories = "5"
futures = "0.3"
tokio-stream = "0.1"
mime_guess = "2"
libc = "0.2"
